Update Quarkus Diameter dependencies and format code
Upgraded Quarkus version to 3.21.3 in `pom.xml` and updated the import path for `TlsRegistryBuildItem` in `DiameterProcessor.java`. Also applied consistent code formatting across files to improve readability and maintainability.